#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([Automatic],[0.1.3.1],[http://forum.dsmg600.info/t2291-%5BREL%5D-Automatic-funplug-0.5.html]) AC_CONFIG_SRCDIR([src/automatic.c])
AM_INIT_AUTOMAKE([1.10 foreign])

# get the flags
CFLAGS="${CFLAGS=}"
# this macro is used to get the arguments supplied
# to the configure script (./configure --enable-debug)
# Check if we have enable debug support.
AC_MSG_CHECKING(whether to enable debugging)
debug_default="no"
AC_ARG_ENABLE(debug,[--enable-debug turn on debugging (default=no)], [enable_debug=$debug_default])
# Yes, shell scripts can be used
if test "x$enable_debug" = "xyes"; then
         CFLAGS="$CFLAGS  -Wall -pedantic -g -DDEBUG"
AC_MSG_RESULT(yes)
else
CFLAGS="$CFLAGS -O3 -Wall -pedantic"
AC_MSG_RESULT(no)
fi

CURL_MINIMUM=7.15.0
LIBXML2_MINIMUM=2.6.31
AC_SUBST(CURL_MINIMUM)
AC_SUBST(LIBXML2_MINIMUM)

# export these variable (so Makefile substitutions
# can be made.
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)

# Checks for libraries.
PKG_CHECK_MODULES(LIBCURL, [libcurl >= $CURL_MINIMUM])
PKG_CHECK_MODULES(LIBXML, [libxml-2.0 >= $LIBXML2_MINIMUM])
AC_CHECK_LIB(curl, curl_global_init)

# Checks for c compiler.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_TOOL(STRIP, strip)

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/param.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([dup2 gettimeofday localtime_r regcomp strerror strstr])

AC_CONFIG_FILES([Makefile
				src/Makefile])
AC_OUTPUT
